[gd_scene load_steps=30 format=2]

[ext_resource path="res://resources/font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://resources/BackgroundBlur.gdshader" type="Shader" id=2]
[ext_resource path="res://sounds/hudalert.mp3" type="AudioStream" id=3]
[ext_resource path="res://resources/theme-submenu.tres" type="Theme" id=5]
[ext_resource path="res://resources/theme.tres" type="Theme" id=6]
[ext_resource path="res://scenes/ui-game/HUD.gd" type="Script" id=7]
[ext_resource path="res://scenes/ui-bits/Alert.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=9]
resource_name = "FadeInVignette"
tracks/0/type = "value"
tracks/0/path = NodePath("Vignette:material:shader_param/vignette_intensity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ 0.0, 0.4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Vignette:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=63]
resource_name = "FadeOutVignette"
tracks/0/type = "value"
tracks/0/path = NodePath("Vignette:material:shader_param/vignette_intensity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ 0.4, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Vignette:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=33]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Vignette:material:shader_param/vignette_intensity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Vignette:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=10]
resource_name = "fade_out"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="StyleBoxFlat" id=71]
bg_color = Color( 0, 1, 0.113725, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.266667, 0.784314, 0.254902, 1 )

[sub_resource type="StyleBoxFlat" id=34]
bg_color = Color( 1, 1, 1, 0.156863 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 0.27451 )

[sub_resource type="StyleBoxFlat" id=72]
bg_color = Color( 0.266667, 0.266667, 0.266667, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.2, 0.2, 0.2, 1 )

[sub_resource type="StyleBoxEmpty" id=65]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 5.0
content_margin_bottom = 5.0

[sub_resource type="Gradient" id=67]
offsets = PoolRealArray( 0.00387597, 1 )
colors = PoolColorArray( 0, 0, 0, 0.694118, 0, 0, 0, 0.45098 )

[sub_resource type="GradientTexture" id=15]
gradient = SubResource( 67 )
width = 64

[sub_resource type="Gradient" id=68]
colors = PoolColorArray( 0.503906, 0, 0, 1, 0.871094, 0, 0, 1 )

[sub_resource type="GradientTexture" id=17]
gradient = SubResource( 68 )
width = 32

[sub_resource type="StyleBoxFlat" id=66]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 5.0
content_margin_bottom = 4.0
bg_color = Color( 1, 1, 1, 0.25098 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 0.392157 )

[sub_resource type="StyleBoxFlat" id=73]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 5.0
content_margin_bottom = 4.0
bg_color = Color( 0.207843, 0.207843, 0.207843, 0.25098 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 0.392157 )

[sub_resource type="Shader" id=31]
code = "/* Modified from https://godotshaders.com/shader/color-vignetting/, by randomDam and licensed under CC0 */
shader_type canvas_item;

uniform float vignette_intensity = 0.4;
uniform float vignette_opacity : hint_range(0.0, 1.0) = 0.5;
uniform vec4 vignette_rgb : hint_color = vec4(0.0, 0.0, 0.0, 1.0);

float vignette(vec2 uv){
	uv *= 1.0 - uv.xy;
	float vignette = uv.x * uv.y * 15.0;
	return pow(vignette, vignette_intensity * vignette_opacity);
}

void fragment(){
	vec4 text = texture(TEXTURE, UV);
	
	text.rgba *= (vignette_rgb.rgba);
	text.rgba *= (1.0 - vignette(UV));
	
	COLOR = vec4(text.rgb,text.a);
}"

[sub_resource type="ShaderMaterial" id=32]
shader = SubResource( 31 )
shader_param/vignette_intensity = 0.0
shader_param/vignette_opacity = 0.5
shader_param/vignette_rgb = Color( 1, 0, 0, 1 )

[sub_resource type="Animation" id=62]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=28]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="ShaderMaterial" id=64]
shader = ExtResource( 2 )
shader_param/lod = 2.0

[sub_resource type="DynamicFont" id=27]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=75]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 1, 1, 1, 0.141176 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 0.25098 )

[sub_resource type="StyleBoxFlat" id=74]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 1, 0.792157, 0.792157, 0.156863 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0.482353, 0.482353, 0.27451 )

[node name="HUD" type="Control"]
modulate = Color( 1, 1, 1, 0.875 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}
corrosion_color = Color( 0.180392, 0.760784, 0.494118, 1 )
fire_color = Color( 1, 0.470588, 0, 1 )
ice_color = Color( 0.207843, 0.517647, 0.894118, 1 )

[node name="ProgressTween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
anims/FadeInVignette = SubResource( 9 )
anims/FadeOutVignette = SubResource( 63 )
anims/RESET = SubResource( 33 )
anims/fade_out = SubResource( 10 )

[node name="HUD" type="VBoxContainer" parent="."]
margin_left = 40.0
margin_top = 40.0
margin_right = 282.0
margin_bottom = 329.0
custom_constants/separation = 20

[node name="HealthBar" type="ProgressBar" parent="HUD"]
unique_name_in_owner = true
margin_right = 242.0
margin_bottom = 42.0
rect_min_size = Vector2( 200, 42 )
custom_styles/fg = SubResource( 71 )
custom_styles/bg = SubResource( 34 )
value = 90.0
percent_visible = false

[node name="HealthPoints" type="Label" parent="HUD/HealthBar"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -1.0
margin_right = 25.0
margin_bottom = 2.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.415686, 1, 0.121569, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "100"
valign = 1

[node name="AmmoBar" type="ProgressBar" parent="HUD"]
unique_name_in_owner = true
margin_top = 62.0
margin_right = 242.0
margin_bottom = 88.0
rect_min_size = Vector2( 200, 26 )
custom_styles/fg = SubResource( 72 )
custom_styles/bg = SubResource( 34 )
value = 50.0
percent_visible = false

[node name="Refills" type="Label" parent="HUD/AmmoBar"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -1.0
margin_right = 25.0
margin_bottom = 2.0
theme = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0.286275, 0.286275, 0.286275, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "8"
valign = 1

[node name="StatusBar" type="PanelContainer" parent="HUD"]
margin_top = 108.0
margin_right = 97.0
margin_bottom = 336.0
size_flags_horizontal = 0
theme = ExtResource( 5 )
custom_styles/panel = SubResource( 34 )
__meta__ = {
"_edit_group_": true
}

[node name="MarginContainer" type="MarginContainer" parent="HUD/StatusBar"]
margin_left = 3.0
margin_top = 3.0
margin_right = 94.0
margin_bottom = 225.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="StatusBar" type="VBoxContainer" parent="HUD/StatusBar/MarginContainer"]
unique_name_in_owner = true
margin_left = 10.0
margin_top = 10.0
margin_right = 81.0
margin_bottom = 212.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 15

[node name="Level" type="MarginContainer" parent="HUD/StatusBar/MarginContainer/StatusBar"]
margin_right = 71.0
margin_bottom = 29.0
size_flags_vertical = 0

[node name="Label" type="Label" parent="HUD/StatusBar/MarginContainer/StatusBar/Level"]
margin_right = 71.0
margin_bottom = 29.0
custom_styles/normal = SubResource( 65 )
text = "Level 0"
align = 1
valign = 1

[node name="Progress" type="TextureProgress" parent="HUD/StatusBar/MarginContainer/StatusBar/Level"]
show_behind_parent = true
margin_right = 71.0
margin_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
value = 50.0
texture_under = SubResource( 15 )
texture_progress = SubResource( 17 )
nine_patch_stretch = true

[node name="Wave" type="MarginContainer" parent="HUD/StatusBar/MarginContainer/StatusBar"]
margin_top = 44.0
margin_right = 71.0
margin_bottom = 73.0
size_flags_vertical = 0

[node name="Label" type="Label" parent="HUD/StatusBar/MarginContainer/StatusBar/Wave"]
margin_right = 71.0
margin_bottom = 29.0
custom_styles/normal = SubResource( 65 )
text = "Wave 0"
align = 1
valign = 1

[node name="Progress" type="TextureProgress" parent="HUD/StatusBar/MarginContainer/StatusBar/Wave"]
show_behind_parent = true
margin_right = 71.0
margin_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
value = 50.0
texture_under = SubResource( 15 )
texture_progress = SubResource( 17 )
nine_patch_stretch = true

[node name="Coins" type="Label" parent="HUD/StatusBar/MarginContainer/StatusBar"]
margin_top = 88.0
margin_right = 71.0
margin_bottom = 116.0
custom_colors/font_color = Color( 1, 0.823529, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
custom_styles/normal = SubResource( 66 )
text = "$0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="HUD/StatusBar/MarginContainer/StatusBar"]
margin_top = 131.0
margin_right = 71.0
margin_bottom = 159.0
custom_colors/font_color = Color( 0, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
custom_styles/normal = SubResource( 66 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LaserModifier" type="HBoxContainer" parent="HUD/StatusBar/MarginContainer/StatusBar"]
margin_top = 174.0
margin_right = 71.0
margin_bottom = 202.0
custom_constants/separation = 7

[node name="Panel" type="ColorRect" parent="HUD/StatusBar/MarginContainer/StatusBar/LaserModifier"]
margin_right = 3.0
margin_bottom = 28.0
rect_min_size = Vector2( 3, 0 )
size_flags_horizontal = 0

[node name="Label" type="Label" parent="HUD/StatusBar/MarginContainer/StatusBar/LaserModifier"]
margin_left = 10.0
margin_right = 71.0
margin_bottom = 28.0
size_flags_horizontal = 3
custom_styles/normal = SubResource( 73 )
text = "Fire"

[node name="Vignette" type="ColorRect" parent="."]
visible = false
material = SubResource( 32 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Alert" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Sound" type="AudioStreamPlayer" parent="Alert"]
stream = ExtResource( 3 )
bus = "SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Alert"]
anims/RESET = SubResource( 62 )
anims/fade_alert = SubResource( 28 )

[node name="Backgrounds" type="Control" parent="Alert"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -25.0
margin_top = -25.0
margin_right = 25.0
margin_bottom = 25.0

[node name="Darkening" type="ColorRect" parent="Alert/Backgrounds"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )

[node name="Blur" type="ColorRect" parent="Alert/Backgrounds"]
show_behind_parent = true
material = SubResource( 64 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="Alert"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -102.5
margin_bottom = 102.5

[node name="AlertContents" type="VBoxContainer" parent="Alert/CenterContainer"]
unique_name_in_owner = true
margin_left = 402.0
margin_right = 664.0
margin_bottom = 215.0
custom_constants/separation = 15

[node name="Title" type="Label" parent="Alert/CenterContainer/AlertContents"]
margin_right = 262.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 27 )
text = "Alert title"
align = 1
valign = 1

[node name="ProgressBar" type="ProgressBar" parent="Alert/CenterContainer/AlertContents"]
margin_top = 80.0
margin_right = 262.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 16 )
theme = ExtResource( 5 )
value = 60.0
percent_visible = false

[node name="ProgressHint" type="Label" parent="Alert/CenterContainer/AlertContents"]
margin_top = 111.0
margin_right = 262.0
margin_bottom = 146.0
custom_styles/normal = SubResource( 75 )
text = "X Y until next Z!"
align = 1

[node name="HSeparator" type="HSeparator" parent="Alert/CenterContainer/AlertContents"]
margin_top = 161.0
margin_right = 262.0
margin_bottom = 165.0

[node name="Subtitle" type="Label" parent="Alert/CenterContainer/AlertContents"]
margin_top = 180.0
margin_right = 262.0
margin_bottom = 215.0
custom_styles/normal = SubResource( 75 )
text = "Alert subtitle"
align = 1

[node name="Tween" type="Tween" parent="Alert"]

[node name="HUDToast" parent="." instance=ExtResource( 8 )]
warning_theme = SubResource( 74 )
is_warning = true
animation_speed = 1.7
